HelloUltraviolet/Fixtures/RejectedSource/Parallelism/SpawnOutsideParallel/Expected.uv
//! Expected diagnostic metadata for the SpawnOutsideParallel rejected-source specimen.

expectedDiagnostic("E-CON-0101", "requirement.20.SpawnRequiresParallelContext")
